# hodo_daq

./: .gitignore  CMakeLists.txt  README.md  amplifier_control.py  daq_controller.cc  frontend.cc  mount_CUSP.sh  run_control.py
bash_scripts/: mount_CUSP_EOS.sh  sync_EOS.sh
config/: bgo_geom.csv  daq_config.conf  frontend.conf
config/SiPM_settings/: 1000-2500.csv  1000-4000.csv  2000-1000.csv  2000-2000.csv  2000-2500.csv  2000-750.csv  3000-1300.csv  4095-1300.csv  board1.csv  board16.csv  board2.csv  board21.csv  board23.csv  board26.csv  board26_new.csv  board26_new_oldboard.csv  board27.csv  board27_new.csv  board28.csv  board28_new.csv  board28_new_oldboard.csv  board29.csv  board29_new.csv  board29_new_oldboard.csv  board3.csv  board4.csv  board5.csv  board6.csv  board7.csv  board8.csv
daq_control/: CMakeLists.txt  daq_controller.cc
daq_control/include/: dataBanks.hh  eventStruct.hh  tcp_server.hh  v1190.h  v1190.hh  v2495.hh
daq_control/src/: dataBanks.cc  tcp_server.cc  v1190.c  v1190.cc  v2495.cc  vmeInterface.cc
data_analysis/: CMakeLists.txt  analysis.cc  create_plots.py
data_analysis/include/: LinkDef.h  dataDecoder.hh  dataFilter.hh  fileReader.hh  logger.hh  tdcEvent.hh
data_analysis/src/: dataDecoder.cc  dataFilter.cc  fileReader.cc  tdcEvent.cc
include/: dataBanks.hh  eventStruct.hh  v1190.h  v1190.hh  v2495.hh  vmeInterface.hh
logs/: logfile.1.txt  logfile.10.txt  logfile.11.txt  logfile.12.txt  logfile.13.txt  logfile.14.txt  logfile.15.txt  logfile.16.txt  logfile.17.txt  logfile.18.txt  logfile.19.txt  logfile.2.txt  logfile.20.txt  logfile.21.txt  logfile.22.txt  logfile.23.txt  logfile.24.txt  logfile.25.txt  logfile.26.txt  logfile.27.txt  logfile.28.txt  logfile.29.txt  logfile.3.txt  logfile.30.txt  logfile.31.txt  logfile.32.txt  logfile.33.txt  logfile.34.txt  logfile.35.txt  logfile.36.txt  logfile.37.txt  logfile.38.txt  logfile.39.txt  logfile.4.txt  logfile.40.txt  logfile.41.txt  logfile.42.txt  logfile.43.txt  logfile.44.txt  logfile.45.txt  (+8 more)
src/: dataBanks.cc  logger.cc  tcp_server.cc  v1190.c  v1190.cc  v2495.cc  vmeInterface.cc
